tests/ui/mir/static-by-value-dyn.stderr
error[E0277]: the size for values of type `(dyn Debug + Sync + 'static)` cannot be known at compilation time
  --> $DIR/static-by-value-dyn.rs:8:1
   |
LL | static STATIC_1: dyn Debug + Sync = *();
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn Debug + Sync + 'static)`
   = note: statics and constants must have a statically known size

error[E0614]: type `()` cannot be dereferenced
  --> $DIR/static-by-value-dyn.rs:8:37
   |
LL | static STATIC_1: dyn Debug + Sync = *();
   |                                     ^^^ can't be dereferenced

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0614.
For more information about an error, try `rustc --explain E0277`.
